<resources>
    <string name="app_name">LoginPractica1</string>
    <string name="create_new_account">Create New</string>
    <string name="create_new_naccount">Create New\nAccount</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
</resources>